--- a/src/main/webapp/app/pages/pageregister/pageregister.css
+++ b/src/main/webapp/app/pages/pageregister/pageregister.css
@@ -120,7 +120,7 @@ button{
 .tituloSong{
     position: relative;
     text-align: center;
-    font-family: 'Oswald', sans-serif;
+    font-family: 'IBM Plex Sans', sans-serif;
     font-size: 1.1em;
     font-weight: 300;
     line-height: 1.7em;
