--- a/src/main/webapp/app/pages/pagesong/pagesong.css
+++ b/src/main/webapp/app/pages/pagesong/pagesong.css
@@ -108,7 +108,7 @@
 }
 .about-us-wrap {
     text-align: center;
-    font-family: 'Lato', sans-serif;
+    font-family: 'IBM Plex Sans', sans-serif;
     font-size: 14px;
     padding-top: 75px;
 }
