--- a/src/main/webapp/app/account/password-reset/init/password-reset-init.css
+++ b/src/main/webapp/app/account/password-reset/init/password-reset-init.css
@@ -33,7 +33,7 @@ label{
     border-radius: 5px!important;
     height: 35px!important;
     color:black!important;
-    font-family: Oswald, sans-serif;
+    font-family: IBM Plex Sans, sans-serif;
     font-style: italic!important;
     font-size: 14px!important;
     margin-left: 10%!important;
