--- a/src/main/webapp/app/account/settings/settings.css
+++ b/src/main/webapp/app/account/settings/settings.css
@@ -33,7 +33,7 @@ form{
     border-radius: 5px!important;
     height: 35px!important;
     color:black!important;
-    font-family: Oswald, sans-serif;
+    font-family: IBM Plex Sans, sans-serif;
     font-style: italic!important;
     font-size: 14px!important;
     width: 100%!important;
