la configuracion de los css de pageregister-pages y pageartist-pages es la misma (Julio/LLauna/Brian/borja)

--- a/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 
 <div id="fh5co-page" [ngSwitch]="isAuthenticated()">
     <aside id="fh5co-aside">
-        <h1 id="fh5co-logo" class="mx-2">
+        <h1 id="fh5co-logo">
             <a routerLink="/">
                 <img src="../../../content/images/logo.png" height="100%" width="100%"/>
             </a>
