--- a/src/main/webapp/app/admin/docs/docs.component.html
+++ b/src/main/webapp/app/admin/docs/docs.component.html
@@ -1,2 +1,2 @@
 
-<iframe src="swagger-ui/index.html" width="114%" height="900" seamless target="_top" title="Swagger UI" class="border-0 swagger"></iframe>
+<iframe src="swagger-ui/index.html" width="90%" height="900" seamless target="_top" title="Swagger UI" class="border-0 swagger" style="margin-left: 12%; "></iframe>
