--- a/src/main/webapp/app/pages/pageartist/pages.css
+++ b/src/main/webapp/app/pages/pageartist/pages.css
@@ -1,37 +1,43 @@
+/*  -- Tiene la misma configuracion que pagregister.css --  */
 
-.fondo{
-    background-size: cover;
-    background-color: whitesmoke !important;
-    float:right!important;
-    width:90%!important;
+.fondo {
+    margin-left: 18%!important;
 }
-
-h1{
-    color:black!important;
-    font-size: 2.5em!important;
-    display:inline-block!important;
-    margin-left: -10%;
+.audio{
+    align-content: center;
+    margin-top: 23%!important;
+    width: 100%;
 }
-::-webkit-input-placeholder { /* Chrome/Opera/Safari */
-    color: grey;
-    font-style: italic;
+.audio:hover{
+    cursor: pointer;
 }
-::-moz-placeholder { /* Firefox 19+ */
-    color: grey;
-    font-style: italic;
+.backdrop {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    background: black;
+    opacity: 0.8;
 }
-:-ms-input-placeholder { /* IE 10+ */
-    color: grey;
-    font-style: italic;
+.botonyoutube{
+    margin-top: 25%;
+    margin-left: 38%;
+    background-color: #228896;
+    border-color: white;
+    height: 31px;
+    width: 50px;
+    border-radius: 8px;
+    line-height: 1px;
 }
-:-moz-placeholder { /* Firefox 18- */
-    color: grey;
-    font-style: italic;
+.botonyoutube:hover{
+    background-color: white;
+    border-color: #228896;
+    cursor: pointer;
+    color:#228896;
+    border-radius: 8px;
+    line-height: 1px;
 }
-.buscador{
-    width:94%;
-}
-
 .cover {
     background-size: cover;
     width: 200px;
@@ -40,27 +46,41 @@ h1{
     margin: 10px;
     position: relative;
 }
-.audio{
-    align-content: center;
-    margin-top: 23%!important;
-    width: 100%;
+.cover:hover .overlayInfo{
+    opacity: 0.9;
 }
-
-.audio:hover{
+.cover img{
+    cursor: pointer;
+    width: 40px;
+    height: 40px;
+    float: left;
+    margin-left: 77%;
+    display: inline-block;
+    margin-top: 1%;
+}
+.close {
+    position:absolute;
+    right:-30px;
+    top:0;
+    z-index:999;
+    font-size:3rem;
+    font-weight: normal;
+    color: red;
+    opacity:1;
     cursor: pointer;
 }
-
-.tituloSong{
-    color: black;
-    font-size: 20px;
-    position: relative;
-    text-align: center;
-    font-family: 'Oswald', sans-serif;
-    font-size: 1.1em;
-    font-weight: 300;
-    line-height: 1.7em;
-    color: #999;
-    margin-left: -48px!important;
+.infoDiv col-lg-3 col-md-4 col-sm-6 image-top {
+    padding-right: 60px!important;
+    padding-left: 10px!important;
+    margin-left: 100px!important;
+}
+.modal-body {
+    position:relative;
+    padding:0;
+}
+.modal-dialog {
+    max-width: 1000px;
+    margin: 100px auto 30px;
 }
 .overlayInfo {
     position: absolute;
@@ -74,404 +94,27 @@ h1{
     transition: 0.5s ease;
     background-color: #f5f5f5;
 }
-.cover img{
-    cursor: pointer;
-    width: 40px;
-    height: 40px;
-    float: left;
-    margin-left: 77%;
-    display: inline-block;
-    margin-top: 1%;
-}
-
-
-.cover:hover .overlayInfo{
-    opacity: 0.9;
-}
-.botonyoutube{
-    margin-top: 25%;
-    margin-left: 38%;
-    background-color: #228896;
-    border-color: white;
-    height: 31px;
-    width: 50px;
-    border-radius: 8px;
-}
-.botonyoutube:hover{
-    background-color: white;
-    border-color: #228896;
-    cursor: pointer;
-    color:#228896;
-    border-radius: 8px;
-}
-.boton2{
-    color:white!important;
-    background-color: green!important;
-    margin-left: 40%!important;
-}
-
-.image-top {
-    /*
-    max-width: inherit!important;
+.tituloSong{
+    color: black!important;
+    position: relative;
     text-align: center;
-    */
-    /*display: flex;
-    flex-wrap: wrap;*/
-}
-
-.form-control{
-    border: 2px solid!important;
-}
-
-@media
-only screen and (-webkit-min-device-pixel-ratio: 2),
-only screen and (   min--moz-device-pixel-ratio: 2),
-only screen and (     -o-min-device-pixel-ratio: 2/1),
-only screen and (        min-device-pixel-ratio: 2),
-only screen and (                min-resolution: 192dpi),
-only screen and (                min-resolution: 2dppx) {
-    .hipster {
-    }
-}
-
-body {
     font-family: 'Oswald', sans-serif;
-    background: #fafafa;
-}
-
-p {
-    font-family: 'Oswald', sans-serif;
-    font-size: 1.1em;
+    font-size: 16px;
     font-weight: 300;
     line-height: 1.7em;
-    color: #999;
-
 }
-
-a, a:hover, a:focus {
-    color: inherit;
-    text-decoration: none;
-    transition: all 0.3s;
-}
-
-.navbar {
-    padding: 15px 10px;
-    background: #fff;
-    border: none;
-    border-radius: 0;
-    margin-bottom: 40px;
-    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
-}
-
-.navbar-btn {
-    box-shadow: none;
-    outline: none !important;
-    border: none;
-}
-
-.line {
-    width: 100%;
-    height: 1px;
-    border-bottom: 1px dashed #ddd;
-    margin: 40px 0;
-}
-
-i, span {
+span {
     display: inline-block;
-}
-
-
-/* ---------------------------------------------------
-    SIDEBAR STYLE
------------------------------------------------------ */
-.wrapper {
-    display: flex;
-    align-items: stretch;
-}
-
-#sidebar {
-    min-width: 250px;
-    max-width: 250px;
-    background: #7386D5;
-    color: #fff;
-    transition: all 0.3s;
-}
-
-#sidebar.active {
-    min-width: 80px;
-    max-width: 80px;
-    text-align: center;
-}
-
-#sidebar.active .sidebar-header h3, #sidebar.active .CTAs {
-    display: none;
-}
-
-#sidebar.active .sidebar-header strong {
-    display: block;
-}
-
-#sidebar ul li a {
-    text-align: left;
-}
-
-#sidebar.active ul li a {
-    padding: 20px 10px;
-    text-align: center;
-    font-size: 0.85em;
-}
-
-#sidebar.active ul li a i {
-    margin-right:  0;
-    display: block;
-    font-size: 1.8em;
-    margin-bottom: 5px;
-}
-
-#sidebar.active ul ul a {
-    padding: 10px !important;
-}
-
-#sidebar.active a[aria-expanded="false"]::before, #sidebar.active a[aria-expanded="true"]::before {
-    top: auto;
-    bottom: 5px;
-    right: 50%;
-    -webkit-transform: translateX(50%);
-    -ms-transform: translateX(50%);
-    transform: translateX(50%);
-}
-
-#sidebar .sidebar-header {
-    padding: 20px;
-    background: #6d7fcc;
-}
-
-#sidebar .sidebar-header strong {
-    display: none;
-    font-size: 1.8em;
-}
-
-#sidebar ul.components {
-    padding: 20px 0;
-    border-bottom: 1px solid #47748b;
-    background-color: #4169E1!important;
-    height:100%;
-}
-
-#sidebar ul li a {
-    padding: 10px;
-    font-size: 1.1em;
-    display: block;
-}
-#sidebar ul li a:hover {
-    color: #7386D5;
-    background: #fff;
-}
-#sidebar ul li a i {
-    margin-right: 10px;
-}
-
-#sidebar ul li.active > a, a[aria-expanded="true"] {
-    color: #fff;
-    background: rgb(211, 211, 211);
-}
-
-
-a[data-toggle="collapse"] {
-    position: relative;
-}
-
-a[aria-expanded="false"]::before, a[aria-expanded="true"]::before {
-    content: '\e259';
-    display: block;
-    position: absolute;
-    right: 20px;
-    font-family: 'Glyphicons Halflings';
-    font-size: 0.6em;
-}
-a[aria-expanded="true"]::before {
-    content: '\e260';
-}
-
-
-ul ul a {
-    font-size: 0.9em !important;
-    padding-left: 30px !important;
-    background: rgb(211, 211, 211);
-}
-
-.col-10{
-    max-width: 100%!important;
-}
-ul.CTAs {
-    padding: 20px;
-}
-
-ul.CTAs a {
-    text-align: center;
-    font-size: 0.9em !important;
-    display: block;
-    border-radius: 5px;
-    margin-bottom: 5px;
-}
-
-a.download {
-    background: #fff;
-    color: #7386D5;
-}
-
-a.article, a.article:hover {
-    background: rgb(211, 211, 211);
-    color: #fff;
-}
-
-.modal-dialog {
-    max-width: 1000px;
-    margin: 100px auto 30px;
-}
-
-.modal-body {
-    position:relative;
-    padding:0px;
-}
-
-.close {
-    position:absolute;
-    right:-30px;
-    top:0;
-    z-index:999;
-    font-size:3rem;
-    font-weight: normal;
-    color: red;
-    opacity:1;
-    cursor: pointer;
-
-}
-
-.backdrop {
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    background: black;
-    opacity: 0.8;
-}
-
-.navbar-light .navbar-nav .nav-link:hover{
-    color: #228896!important;
-}
-
-
-/* ---------------------------------------------------
-    CONTENT STYLE
------------------------------------------------------ */
-#content {
-    min-height: 100vh;
-    transition: all 0.3s;
-    width:100%;
-}
-
-
-/* ---------------------------------------------------
-    MEDIAQUERIES
------------------------------------------------------ */
-
-@media (min-width: 576px){
-    .col-sm-6{
-    max-width: 40%!important;
-    }
 }
 @media (max-width: 600px){
     .cover{
         margin-left: 100px!important;
     }
 }
-
-
 @media screen and (max-width: 400px) {
     .cover{
         margin-left: -30px!important;
     }
 }
-@media screen and (max-width: 767px) {
-
-    .tituloSong{
-        margin-left: 100px!important;
-    }
-}
 
 
-@media screen and (max-width: 730px){
-    .tituloSong{
-        margin-left: -50px!important;
-    }
-}
-
-@media screen and (max-width: 600px){
-   .tituloSong{
-       margin-left: -13px!important;
-   }
-}
-
-@media (max-width: 768px) {
-
-
-    .tituloSong{
-        margin-left: 100px!important;
-    }
-    .cover{
-        margin-left: 100px!important;
-    }
-    #sidebar {
-        min-width: 80px;
-        max-width: 80px;
-        text-align: center;
-        margin-left: -80px;
-    }
-    a[aria-expanded="false"]::before, a[aria-expanded="true"]::before {
-        top: auto;
-        bottom: 5px;
-        right: 50%;
-        -webkit-transform: translateX(50%);
-        -ms-transform: translateX(50%);
-        transform: translateX(50%);
-    }
-    #sidebar.active {
-        margin-left: 0 !important;
-    }
-
-    #sidebar .sidebar-header h3, #sidebar .CTAs {
-        display: none;
-    }
-
-    #sidebar .sidebar-header strong {
-        display: block;
-    }
-
-    #sidebar ul li a {
-        padding: 20px 10px;
-    }
-
-    #sidebar ul li a span {
-        font-size: 0.85em;
-    }
-    #sidebar ul li a i {
-        margin-right:  0;
-        display: block;
-    }
-
-    #sidebar ul ul a {
-        padding: 10px !important;
-    }
-
-    #sidebar ul li a i {
-        font-size: 1.3em;
-    }
-    #sidebar {
-        margin-left: 0;
-    }
-    #sidebarCollapse span {
-        display: none;
-    }
-}
