titulos de las canciones modificados, botón play del reproductor arreglado

--- a/src/main/webapp/app/pages/pagehome/phome.component.html
+++ b/src/main/webapp/app/pages/pagehome/phome.component.html
@@ -166,7 +166,7 @@
                         </div>
                     </div>
                 </div>
-                <p class="tituloSong" style="text-align: center; color: white">{{search.name}}</p>
+                <p class="tituloSong" style="text-align: center; color: white;">{{search.name}}</p>
             </div>
             <div class="row">
                 <br><br>
