--- a/src/main/webapp/app/pages/pagesong/pages.component.html
+++ b/src/main/webapp/app/pages/pagesong/pages.component.html
@@ -20,7 +20,7 @@
                 <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
                 </p>
                 <div class="social1">
-                    <i class="fa fa-facebook" aria-hidden="true"></i>
+                    <i class="fa fa-github" aria-hidden="true"></i>
                 </div>
                 <div class="social3">
                     <i class="fa fa-linkedin" aria-hidden="true"></i>
@@ -35,7 +35,7 @@
                 <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
                 </p>
                 <div class="social1">
-                    <i class="fa fa-facebook" aria-hidden="true"></i>
+                    <i class="fa fa-github" aria-hidden="true"></i>
                 </div>
                 <div class="social3">
                     <i class="fa fa-linkedin" aria-hidden="true"></i>
@@ -50,7 +50,7 @@
                 <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
                 </p>
                 <div class="social1">
-                    <i class="fa fa-facebook" aria-hidden="true"></i>
+                    <i class="fa fa-github" aria-hidden="true"></i>
                 </div>
                 <div class="social3">
                     <i class="fa fa-linkedin" aria-hidden="true"></i>
@@ -70,7 +70,7 @@
                 <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
                 </p>
                 <div class="social1">
-                    <i class="fa fa-facebook" aria-hidden="true"></i>
+                    <i class="fa fa-github" aria-hidden="true"></i>
                 </div>
                 <div class="social3">
                     <i class="fa fa-linkedin" aria-hidden="true"></i>
