--- a/src/main/webapp/app/layouts/navbar/navbar.css
+++ b/src/main/webapp/app/layouts/navbar/navbar.css
@@ -5,6 +5,8 @@
 *	Edit this section
 *
 * ======================================================= */
+
+
 body {
     font-family: 'IBM Plex Sans', sans-serif!important;
     font-weight: 300;
@@ -20,6 +22,7 @@ label{
 
 a{
     font-family: 'IBM Plex Sans', sans-serif!important;
+    font-size: 16px!important;
 }
 
 
