--- a/src/main/webapp/app/pages/pageregister/pageregister.css
+++ b/src/main/webapp/app/pages/pageregister/pageregister.css
@@ -46,7 +46,7 @@ button{
 
 #buscador{
     width: 93%!important;
-    margin-left: -4px!important;
+    margin-left: -35px!important;
 }
 .boton2{
     color:white!important;
@@ -101,7 +101,7 @@ button{
 }
 .col-lg-3{
     flex: 0 0 22%!important;
-    max-width: 20%!important;
+    max-width: 30%!important;
 }
 .modal-body {
     position:relative;
@@ -122,6 +122,10 @@ button{
     opacity: 0;
     transition: 0.5s ease;
     background-color: #f5f5f5;
+}
+.row{
+    width: 93%!important;
+    margin-left: 20%!important;
 }
 .tituloSong{
     position: relative;
