--- a/src/main/webapp/app/pages/pagesong/pages.component.html
+++ b/src/main/webapp/app/pages/pagesong/pages.component.html
@@ -11,7 +11,7 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint, explicabo dolores ipsam aliquam inventore corrupti eveniet quisquam quod totam laudantium repudiandae obcaecati ea consectetur debitis velit facere nisi expedita vel?</p>
 
         <div class="row">
-            <div class="col-lg-4 col-sm-6 text-center mb-4">
+            <div class="col-lg-4 col-sm-6 text-center mb-4" style="margin-top: -7%!important;">
                 <div class="pic"></div><br>
                 <p style="margin-top:71px!important;">
                 <h3><b>Julio</b><br>
@@ -26,7 +26,7 @@
                     <i class="fa fa-linkedin" aria-hidden="true"></i>
                 </div>
             </div>
-            <div class="col-lg-4 col-sm-6 text-center mb-4">
+            <div class="col-lg-4 col-sm-6 text-center mb-4" style="margin-top: -7%!important;">
                 <div class="pic"></div>
                 <p style="margin-top:95px!important;">
                 <h3><b>Llauna</b><br>
@@ -41,7 +41,7 @@
                     <i class="fa fa-linkedin" aria-hidden="true"></i>
                 </div>
             </div>
-            <div class="col-lg-4 col-sm-6 text-center mb-4">
+            <div class="col-lg-4 col-sm-6 text-center mb-4" style="margin-top: -7%!important;">
                 <div class="pic"></div>
                 <p style="margin-top:95px!important;">
                 <h3><b>Borja</b><br>
@@ -59,9 +59,9 @@
 
         </div>
         <div class="row" id="r">
-            <div class="col-lg-2 col-sm-3 text-center mb-2">
+            <div class="col-lg-2 col-sm-3 text-center mb-2" style="margin-top: -7%!important;">
             </div>
-            <div class="col-lg-4 col-sm-6 text-center mb-4">
+            <div class="col-lg-4 col-sm-6 text-center mb-4" style="margin-top: 2%!important;">
                 <div class="pic"></div>
                 <p style="margin-top:95px!important;">
                 <h3><b>Bryan</b><br>
@@ -76,7 +76,7 @@
                     <i class="fa fa-linkedin" aria-hidden="true"></i>
                 </div>
             </div>
-            <div class="col-lg-4 col-sm-6 text-center mb-4">
+            <div class="col-lg-4 col-sm-6 text-center mb-4" style="margin-top: 2%!important;">
                 <div class="pic"></div>
                 <p style="margin-top:95px!important;">
                 <h3><b>Javier</b><br>
@@ -91,7 +91,7 @@
                     <i class="fa fa-linkedin" aria-hidden="true"></i>
                 </div>
             </div>
-            <div class="col-lg-2 col-sm-3 text-center mb-2">
+            <div class="col-lg-2 col-sm-3 text-center mb-2" style="margin-top: 2%!important;">
             </div>
         </div>
     </div>
